--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,29 @@
 asttokens==2.2.1
+click==7.1.2
 colorama==0.4.6
+contourpy==1.0.6
+cycler==0.11.0
 executing==1.2.0
+fonttools==4.38.0
 icecream==2.1.3
+kiwisolver==1.4.4
+matplotlib==3.6.2
 numpy==1.24.1
+packaging==22.0
+paho-mqtt==1.6.1
+pandas==1.5.2
+Pillow==9.3.0
 Pygments==2.13.0
-PyQt5==5.15.7
+pyparsing==3.0.9
+PyQt5==5.15.4
+pyqt5-plugins==5.15.4.2.2
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.11.0
 pyqtgraph==0.13.1
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+pytz==2022.7
+qt5-applications==5.15.2.2.2
+qt5-tools==5.15.2.1.2
 scipy==1.9.3
 six==1.16.0
